--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
    "require": {
     "php": "^5.4.0|^7.0",
     "illuminate/support": "5.*|6.*",
-    "guzzlehttp/guzzle": "5.*|6.*"
+    "guzzlehttp/guzzle": "6.*"
    },
    "require-dev": {
         "phpunit/phpunit" : "4.*",
